@@ -123,16 +123,8 @@ endif
 	rm -f $(objdir)/configparms
 	echo "CC = $(CC)"		  >> $(objdir)/configparms
 	echo "BUILD_CC = $(BUILD_CC)"	  >> $(objdir)/configparms
-#	Reduce optimization level of build on i386.  This needs to
-#	be properly put into sysdeps somewhere until the bug is
-#	fixed. - JB 2002-Oct-17
-ifeq ($(DEB_HOST_GNU_CPU),i386)
-	echo "CFLAGS = -O"		  >> $(objdir)/configparms
-	echo "BUILD_CFLAGS = -O"	  >> $(objdir)/configparms
-else
 	echo "CFLAGS = $(HOST_CFLAGS)"	  >> $(objdir)/configparms
-	echo "BUILD_CFLAGS = -O2"	  >> $(objdir)/configparms
-endif
+	echo "BUILD_CFLAGS = $(BUILD_CFLAGS)" >> $(objdir)/configparms
 	echo "BASH := /bin/bash"	  >> $(objdir)/configparms
 	echo "KSH := /bin/bash"		  >> $(objdir)/configparms
 	echo "mandir = $(mandir)"	  >> $(objdir)/configparms
