@@ -1,5 +1,11 @@
 glibc (2.3.1-4) unstable; urgency=low
 
+  * Daniel Jacobowitz <dan@debian.org>
+    - debian/patches/cvs.patch: Fix RCS ID tags.
+    - debian/rules, debian/sysdeps/sysdeps.mk: Move i386 optimization
+      hack out of the rules file and put debugging information back in
+      libc6-dbg for i386.
+
   * GOTO Masanori <gotom@debian.or.jp>
     - debian/libc/DEBIAN/postinst: add more NSS services:
         rsh-server telnetd cyrus-imapd cyrus21-common uw-imapd uw-imapd-ssl
@@ -13,7 +19,7 @@ glibc (2.3.1-4) unstable; urgency=low
     - debian/patches/cvs.dpatch: New file.
     - debian/patches/0list: Update
 
- -- GOTO Masanori <gotom@debian.or.jp>  Tue, 22 Oct 2002 12:43:54 +0900
+ -- Daniel Jacobowitz <dan@debian.org>  Tue, 29 Oct 2002 13:14:51 -0500
 
 glibc (2.3.1-3) unstable; urgency=low
 
